--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         "phpunit/phpunit": "^9.5"
     },
     "scripts": {
-        "lint": "vendor/bin/phpcs --standard=PSR12 index.php src/ tests/",
+        "lint": "vendor/bin/phpcs --standard=PSR12 index.php config.php src/ tests/",
         "test": "phpunit"
     }
 }
